--- a/src/lib/css/main.css
+++ b/src/lib/css/main.css
@@ -1,38 +1,35 @@
 @import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anton&family=Monda:wght@400;700&display=swap');
 @import url('textos.css');
 @import url('botones.css');
 
 
 
 :root {
-	--fuente: 'Roboto', sans-serif;
-	--color-blanco: #fff;
-	--color-morado: #4e0ae3;
-	--color-negro: #3d4451;
-	--color-amarillo: #fbbd23;
-	--color-amarillo-abono: #e9a805;
-	--color-amarillo-comisiones: #f8cc5f;
-	--color-azul: #3abff8;
-	--color-verde: #36d399;
-	--color-gris: #d2d4d7;
-	--color-gris-100: #f2f2f2;
-	--color-rojo: #f87272;
-	--color-rosa: #f000b8;
+	--monda: "Monda", sans-serif;
+	--anton: "Anton", sans-serif;
 
-	--color-morado-acent: #4406cb;
-	--color-negro-acent: #313641;
-	--color-amarillo-acent: #e9a805;
-	--color-azul-acent: #28aee8;
-	--color-verde-acent: #2bb380;
-	--color-rojo-acent: #dc5959;
-	--color-rosa-acent: #c00093;
+	--color-blanco: #FFFFFF;
+	--color-blanco-50: #F5F4F9;
+	--color-rojo: #E31C25;
+	--color-rojo-500: #AA0109;
+	--color-negro: #000;
+	--color-gris-50: #EFEFEF;
+	--color-gris-100: #CCCCCC;
+	--color-gris-200: #B4B4B4;
+	--color-gris-500: #5C5C5C;
+	--color-gris-700: #414141;
+	--color-gris-800: #333333;
+	--color-gris-900: #272727;
 
-	--txt-45: 45px;
+
+	
+	
+
+	--txt-160: 160px;
+	--txt-48: 48px;
 	--txt-40: 40px;
-	--txt-35: 35px;
-	--txt-30: 30px;
-	--txt-28: 28px;
+	--txt-32: 32px;
 	--txt-24: 24px;
 	--txt-20: 20px;
 	--txt-18: 18px;
@@ -44,13 +41,13 @@
 /*Contenedor bootstrap personalizado*/
 
 body {
-	font-family: var(--fuente) !important;
-	color: var(--color-negro) !important;
+	font-family: var(--monda) !important;
+	color: var(--color-gris-900) !important;
 }
 
 html,
 section {
-	background-color: #f5f7f9;
+	width: 100%;
 }
 
 /*Generales*/
@@ -80,22 +77,22 @@ a:hover {
 }
 
 h1 {
-	font-size: var(--txt-28);
+	font-size: var(--txt-40);
 }
 h2 {
-	font-size: var(--txt-24);
+	font-size: var(--txt-32);
 }
 h3 {
-	font-size: var(--txt-20);
+	font-size: var(--txt-24);
 }
 h4 {
-	font-size: var(--txt-18);
+	font-size: var(--txt-20);
 }
 h5 {
-	font-size: var(--txt-16);
+	font-size: var(--txt-18);
 }
 h6 {
-	font-size: var(--txt-14);
+	font-size: var(--txt-16);
 }
 
 p,
@@ -143,58 +140,48 @@ h6 {
 	opacity: 0.5;
 }
 
-/* .cont-principal {
-    margin-top: 70px;
-} */
-
 
 /* CLASES PARA FONDOS */
 
 .fdo-blanco {
 	background-color: var(--color-blanco);
 }
-.fdo-morado {
-	background-color: var(--color-morado);
-}
-.fdo-negro {
-	background-color: var(--color-negro);
-}
-.fdo-amarillo {
-	background-color: var(--color-amarillo);
-}
-.fdo-azul {
-	background-color: var(--color-azul);
-}
-.fdo-verde {
-	background-color: var(--color-verde);
-}
-.color-verde {
-	color: var(--color-verde);
-}
-.fdo-gris {
-	background-color: var(--color-gris);
-}
-.fdo-gris-100 {
-	background-color: var(--color-gris-100);
+.fdo-blanco-50 {
+	background-color: var(--color-blanco-50);
 }
 .fdo-rojo {
 	background-color: var(--color-rojo);
 }
-.color-rojo {
-	color: var(--color-rojo);
+.fdo-rojo-500 {
+	background-color: var(--color-rojo-500);
 }
-.fdo-rosa {
-	background-color: var(--color-rosa);
+.fdo-negro{
+	background-color: var(--color-negro);
+}
+.fdo-gris-50 {
+	background-color: var(--color-gris-50);
+}
+.fdo-gris-100 {
+	background-color: var(--color-gris-100);
+}
+.fdo-gris-200 {
+	background-color: var(--color-gris-200);
+}
+.fdo-gris-500 {
+	background-color: var(--color-gris-500);
+}
+.fdo-gris-700 {
+	background-color: var(--color-gris-700);
+}
+.fdo-gris-800 {
+	background-color: var(--color-gris-800);
+}
+.fdo-gris-900 {
+	background-color: var(--color-gris-900);
 }
 
-.fdo-fondo {
-	background-color: #f5f7f9;
-}
 
-
-
-
-@media only screen and (max-width: 1024px) {
+@media only screen and (max-width: 992px) {
 	p,
 	td,
 	th,
@@ -202,30 +189,22 @@ h6 {
 	label {
 		font-size: var(--txt-12);
 	}
-}
-
-@media only screen and (max-width: 992px) {
-	.contenedor {
-		width: 100vw;
-		padding: 0 20px;
-	}
-}
-
-@media only screen and (max-width: 768px) {
 	h1 {
+		font-size: var(--txt-32);
+	}
+	h2 {
 		font-size: var(--txt-24);
 	}
-}
-
-@media only screen and (max-width: 575px) {
-	h1 {
+	h3 {
 		font-size: var(--txt-20);
 	}
-
-	.contenedor {
-		margin-top: 80px;
+	h4 {
+		font-size: var(--txt-18);
 	}
-	th {
-		font-size: 10px;
+	h5 {
+		font-size: var(--txt-16);
+	}
+	h6 {
+		font-size: var(--txt-14);
 	}
 }
