--- a/src/lib/css/main.css
+++ b/src/lib/css/main.css
@@ -1,7 +1,10 @@
-@import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css');
+/* @import url('https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css'); */
+@import url('bootstrap-icons.css');
 @import url('https://fonts.googleapis.com/css2?family=Anton&family=Monda:wght@400;700&display=swap');
 @import url('textos.css');
 @import url('botones.css');
+@import url('carrusel.css');
+@import url('formularios.css');
 
 
 
@@ -21,12 +24,11 @@
 	--color-gris-700: #414141;
 	--color-gris-800: #333333;
 	--color-gris-900: #272727;
+	--color-gris-1000:#1e1e1e;
 
-
-	
-	
 
 	--txt-160: 160px;
+	--txt-100: 100px;
 	--txt-48: 48px;
 	--txt-40: 40px;
 	--txt-32: 32px;
@@ -48,13 +50,15 @@ body {
 }
 
 html,
-section {
+section, main {
 	width: 100%;
 }
 
 /*Generales*/
 main {
 	padding: 0px !important;
+	padding-top: 60px !important;
+	max-width: 100%;
 }
 
 
@@ -63,15 +67,20 @@ td,
 th,
 li,
 label {
-	font-size: var(--txt-14);
+	font-size: var(--txt-16);
 	font-weight: normal;
 }
 
+ul{
+	list-style: none;
+	margin-left: 0px;
+	padding-left: 0px;
+}
 
 a {
 	text-decoration: none;
 	color: currentColor;
-	font-size: var(--txt-14);
+	font-size: var(--txt-16);
 }
 a:hover {
 	text-decoration: none;
@@ -181,15 +190,26 @@ h6 {
 .fdo-gris-900 {
 	background-color: var(--color-gris-900);
 }
+.fdo-gris-1000 {
+	background-color: var(--color-gris-1000);
+}
 
+.border-gris-900{
+	border: 1px solid var(--color-gris-900);
+}
 
+@media screen and (max-width: 1200px){
+	main{
+		padding-top: 50px !important;
+	}
+}
 @media only screen and (max-width: 992px) {
 	p,
 	td,
 	th,
 	li,
 	label {
-		font-size: var(--txt-12);
+		font-size: var(--txt-14);
 	}
 	h1 {
 		font-size: var(--txt-32);
